--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <div id="messages">
         <div class="container">
             <div class="messages">
+                <div class="icon-menu">
+                    <img src="img/menu-ham-icon.png">
+                </div>
                 <div class="panel">
+                    <div class="icon-close">
+                        <img src="img/close-btn.png">
+                    </div>
                     <div class="panel_photo">
                         <span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="19.095" height="13.438" viewBox="0 0 19.095 13.438">
